style.css
body {
background-image: url(Images/background.jpg);
background-size: cover;
font-family: "VT323", monospace;
text-align: center;
}

.content-wrapper {
  background-color:rgb(230, 208, 208,.5);
  border: 10px solid transparent;
  padding: 1%;
  border-radius: 2rem;
  margin: 25px 50px 25px 50px;
}

h1 {
  position: relative;
  font-size: 65px;
  background: rgb(94, 143, 94);
  color: #F7F3EF;
  text-shadow: 6px 6px rgb(53, 99, 53); 
  box-shadow: 3px 3px 1px rgb(53, 99, 53);
  display: flex;
  justify-content: space-between;
  float: left;
  margin: auto 15% 3% 8%;
  padding: 10px 125px;
  border: 4px solid rgba(29, 80, 29,.5);
  border-radius: .25rem;
  opacity: .9;
  animation-name: game-title;
  animation-duration: 2s;
  animation-iteration-count: 1;
}

.header-crystal {
  align-self: center;
  position: relative;
  height: 30px;
  width: 30px;
  margin: 0 10px;
  opacity: .80;
}

#crystal1 {
  right: 10px;
}

#crystal2 {
  left: 15px;
}

button {
  font-family: "VT323", monospace;
  font-size: 15px;
  background: rgb(94, 143, 94);
  color: #F7F3EF;
  text-align: center;
  text-shadow: 4px 3px rgb(53, 99, 53);
  box-shadow: 2px 2px 1px rgb(53, 99, 53);
  padding: 6px 15px;
  border: 2px rgba(29, 80, 29,.5) solid;
  border-radius: .25rem;
  margin: 20px;
}

#score {
  padding-top: 5px;
  margin: 5% 6% 1% 5%;
  border-top: 3px rgb(0,0,0, .5) solid;
}

.reset-button {
  align-content: center;
}

menu {
  position: absolute;
  display: flex;
  clear: left;
  flex-direction: column;
  justify-content: flex-end;
  margin: 10px 0% 10px 65%;
  animation-name: fade-in;
  animation-duration: 3s;
  animation-iteration-count: 1;
}

.board {
  clear: both;
  position: relative;
  background-image: url(Images/grass2.png);
  background-color: rgb(39, 77, 64); 
  height: 450px;
  width: 950px;
  padding: 0px;
  margin: auto;
  border-radius: .5rem;
  border: 2px rgba(29, 80, 29,.5) solid;
  box-shadow: 2px 2px 1px rgb(53, 99, 53);
  /* animation-name: fade-in;
  animation-duration: 1s;
  animation-iteration-count: 1; */
}

.character {
  position: absolute; /*rendering a class absolute allows you to position it using top, left, etc. on the page.*/
  background-image: url(Images/girl-still-left.png);
  background-repeat: no-repeat;
  color: transparent;
  height: 25px;
  width: 25px;
  animation-name: fade-in;
  animation-duration: 1s;
  animation-iteration-count: 1;
}

.character-walking-left {
  position: absolute; /*rendering a class absolute allows you to position it using top, left, etc. on the page.*/
  background-image: url(Images/girl-walking-left.png);
  background-repeat: no-repeat;
  color: transparent;
  height: 25px;
  width: 25px;
}

.rock {
  position: absolute;
  background-image: url(Images/tree.png);
  background-repeat: no-repeat;
  color: transparent;
  margin: 5px;
  height: 25px;
  width: 25px;
  animation-name: fade-in;
  animation-duration: 1s;
  animation-iteration-count: 1;
}

.ghost {
  position: absolute;
  background-image: url(Images/ghost-x1.gif);
  background-repeat: no-repeat;
  color: transparent;
  height: 25px;
  width: 25px;
  animation-name: fade-in;
  animation-duration: 1s;
  animation-iteration-count: 1;
}

.crystal {
  height:20px;
  margin:2px;
  animation-name: fade-in;
  animation-duration: .5s;
  animation-iteration-count: 1;
}

.heart {
  height:20px;
  animation-name: fade-in;
  animation-duration: .5s;
  animation-iteration-count: 1;
}

#question-preface {
  text-transform: uppercase;
}

.message {
  position: absolute;
  font-family: "VT323", monospace;
  background: #DDBDD5;
  color: black;
  opacity: .85;
  padding: 20px;
  width: 70%;
  margin: 15% 15%;
  animation-name: fade-in;
  animation-duration: .5s;
  animation-iteration-count: 1;
}

iframe {
  opacity: .6;
  margin: 20px;
}

footer {
  font-size: 15px;
  color: #F7F3EF;
  background: rgb(94, 143, 94,.7);
  text-shadow: 3px 3px rgb(53, 99, 53); 
  box-shadow: 1px 2px 1px rgb(53, 99, 53);
  padding: .65%;
  margin: 2% 40%;
  border: 2px rgba(29, 80, 29,.5) solid;
  border-radius: .25rem;
}

.fade-out {
  animation-name: fade-out;
  animation-duration: .5s;
  animation-iteration-count: 1;
}

@keyframes game-title {
  0% {
    opacity: 0;
    font-size: 0;
  }
  50% {
    opacity: .5;
    font-size: 35;
  }
  100% {
    font-size: 75;
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: .85;
  }
}

@keyframes fade-out {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

